--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: -apple-system, sans-serif; }
         body { background: var(--bg); padding-bottom: 200px; padding-top: 10px; }
         
+        /* Fixed Header */
         .top-nav { position: sticky; top: 0; z-index: 100; background: white; margin: 0 10px 15px 10px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); overflow: hidden; }
         .station-input { width: 100%; padding: 12px; border: none; font-weight: 900; text-align: center; font-size: 16px; outline: none; color: var(--reben-red); text-transform: uppercase; }
         
@@ -23,6 +24,7 @@
         .p-input label { font-size: 9px; font-weight: 800; color: #999; margin-bottom: 3px; }
         .p-input input { width: 100%; padding: 8px; border: 1.5px solid #eee; border-radius: 10px; text-align: center; font-weight: 900; font-size: 14px; outline: none; }
 
+        /* Nozzle Cards */
         .nozzle-list { padding: 0 10px; }
         .nozzle-row { background: white; border-radius: 20px; padding: 18px; margin-bottom: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.06); border-left: 12px solid #ccc; }
         .row-91 { border-left-color: var(--91); }
@@ -33,7 +35,7 @@
         .nozzle-name { border: none; font-weight: 900; color: #222; font-size: 1.1rem; width: 130px; outline: none; background: transparent; }
         .fuel-select { padding: 6px 12px; border-radius: 10px; border: none; background: #f0f0f0; font-weight: 800; font-size: 12px; }
 
-        /* WIDER SCAN GRID FOR LONG NUMBERS */
+        /* WIDE SCAN GRID FOR LONG NUMBERS */
         .scan-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
         .input-grp { position: relative; width: 100%; }
         .input-grp label { display: block; text-align: center; font-size: 10px; color: #888; font-weight: 900; margin-bottom: 6px; text-transform: uppercase; }
@@ -41,12 +43,12 @@
         /* THE FIXED BOX - WIDER AND HORIZONTAL SCROLL ENABLED */
         .reading-input { 
             width: 100%; 
-            padding: 16px 35px 16px 8px; /* Extra padding on right for camera btn */
+            padding: 16px 35px 16px 8px; 
             border: 2px solid #edf0f5; 
             border-radius: 14px; 
             font-weight: 900; 
             font-size: 18px; 
-            text-align: left; /* Changed to left so start of long number is visible */
+            text-align: left; /* Alignment allows better visibility of long values */
             background: #fafafa; 
             outline: none;
             overflow-x: auto;
@@ -70,6 +72,7 @@
             z-index: 5;
         }
 
+        /* Footer Controls */
         .footer-tools { position: fixed; bottom: 0; left: 0; right: 0; background: #111; padding: 20px; border-radius: 25px 25px 0 0; z-index: 200; }
         .stats { display: flex; justify-content: space-between; margin-bottom: 15px; color: white; align-items: center; }
         .total-val { color: #fff; font-size: 28px; font-weight: 900; }
@@ -83,7 +86,7 @@
         .btn-pdf { background: var(--reben-red); color: #fff; }
         .btn-wa { background: var(--wa); color: #fff; font-size: 22px; }
 
-        /* SCANNER MODAL */
+        /* Scanner Overlay */
         .modal { display: none; position: fixed; inset: 0; background: #000; z-index: 1000; flex-direction: column; }
         .cam-view { position: relative; flex: 1; display: flex; align-items: center; justify-content: center; }
         video { width: 100%; height: 100%; object-fit: cover; }
@@ -279,4 +282,38 @@
         const station = document.getElementById('sn').value || "STATION";
         let msg = `🏪 *${station.toUpperCase()}*%0A💰 *TOTAL:* ${document.getElementById('grandTotal').innerText} SAR%0A%0A`;
         document.querySelectorAll('.nozzle-row').forEach(row => {
-            const id = row
+            const id = row.id.split('-')[1];
+            msg += `📍 ${document.getElementById(`name-${id}`).value}: ${document.getElementById(`i${id}`).value || 0} -> ${document.getElementById(`f${id}`).value || 0}%0A`;
+        });
+        window.open(`https://wa.me/?text=${msg}`, '_blank');
+    }
+
+    function exportExcel() {
+        const data = [];
+        document.querySelectorAll('.nozzle-row').forEach(row => {
+            const id = row.id.split('-')[1];
+            data.push({ Nozzle: document.getElementById(`name-${id}`).value, Fuel: document.getElementById(`type-${id}`).value, Start: document.getElementById(`i${id}`).value, End: document.getElementById(`f${id}`).value });
+        });
+        const ws = XLSX.utils.json_to_sheet(data);
+        const wb = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(wb, ws, "Report");
+        XLSX.writeFile(wb, "Station_Report.xlsx");
+    }
+
+    function exportPDF() {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
+        doc.text("STATION REPORT", 14, 15);
+        const rows = [];
+        document.querySelectorAll('.nozzle-row').forEach(row => {
+            const id = row.id.split('-')[1];
+            rows.push([document.getElementById(`name-${id}`).value, document.getElementById(`type-${id}`).value, document.getElementById(`i${id}`).value, document.getElementById(`f${id}`).value]);
+        });
+        doc.autoTable({ head: [["Nozzle", "Type", "Start", "End"]], body: rows, startY: 25 });
+        doc.save("Report.pdf");
+    }
+
+    window.onload = loadMem;
+</script>
+</body>
+</html>
