--- a/index.html
+++ b/index.html
@@ -320,10 +320,11 @@
         const doc = new jsPDF();
         const station = document.getElementById('sn').value.toUpperCase();
         const shift = isDayTime ? "Day" : "Night";
+        const time = new Date().toLocaleTimeString('en-US', { hour12: true, hour: '2-digit', minute: '2-digit', second: '2-digit' });
 
         doc.setFontSize(18); doc.text(`STATION: ${station}`, 14, 20);
         doc.setFontSize(10);
-        doc.text(`Date: ${getNowStr()} | Shift: ${shift}`, 14, 28);
+        doc.text(`Date: ${getNowStr()} | Shift: ${shift} | Time: ${time}`, 14, 28);
         doc.text(`Prices: 91 (${document.getElementById('p91').value}) | 95 (${document.getElementById('p95').value}) | D (${document.getElementById('pd').value})`, 14, 34);
         
         const summary = [
@@ -350,6 +351,12 @@
             ]);
         });
         doc.autoTable({ head: [["Nozzle", "Type", "Start", "End", "Difference"]], body: rows, startY: doc.lastAutoTable.finalY + 10 });
+        
+        const finalY = doc.lastAutoTable.finalY + 15;
+        doc.setFontSize(12);
+        doc.setFont("helvetica", "bold");
+        doc.text("Designed By - Mozahid", 14, finalY);
+
         doc.save(`${station}_Report.pdf`);
     }
 
