--- a/index.html
+++ b/index.html
@@ -445,10 +445,10 @@
             msg += `     Shift - ${shift}%0A`;
             msg += `     Reporting Time - ${time}%0A%0A`;
             msg += `---- SUMMARY ----%0A%0A`;
-            msg += `泙 *91 Total:* ${document.getElementById('sum91').innerText} L%0A`;
-            msg += `閥 *95 Total:* ${document.getElementById('sum95').innerText} L%0A`;
-            msg += `泯 *D   Total:* ${document.getElementById('sumD').innerText} L%0A`;
-            msg += `腸 *Total Amount:* ${document.getElementById('grandTotal').innerText} SAR%0A%0A%0A%0A`;
+            msg += `🟢 *91 Total:* ${document.getElementById('sum91').innerText} L%0A`;
+            msg += `🔴 *95 Total:* ${document.getElementById('sum95').innerText} L%0A`;
+            msg += `🟡 *D   Total:* ${document.getElementById('sumD').innerText} L%0A`;
+            msg += `💰 *Total Amount:* ${document.getElementById('grandTotal').innerText} SAR%0A%0A%0A%0A`;
             msg += `*Designed by Mozahid*`;
             window.open(`https://wa.me/?text=${msg}`, '_blank');
         }
