--- a/index.html
+++ b/index.html
@@ -617,10 +617,10 @@
         msg += `     Shift - ${shift}%0A`;
         msg += `     Reporting Time - ${time}%0A%0A`;
         msg += `---- SUMMARY ----%0A%0A`;
-        msg += `🟢 *91 Total:* ${document.getElementById('sum91').innerText} L%0A`;
-        msg += `🔴 *95 Total:* ${document.getElementById('sum95').innerText} L%0A`;
-        msg += `🟡 *D Total:* ${document.getElementById('sumD').innerText} L%0A`;
-        msg += `💰 *Total Amount:* ${document.getElementById('grandTotal').innerText} SAR%0A%0A`;
+        msg += ` *🟢91 Total:* ${document.getElementById('sum91').innerText} L%0A`;
+        msg += ` *🔴95 Total:* ${document.getElementById('sum95').innerText} L%0A`;
+        msg += ` *🟡D Total:* ${document.getElementById('sumD').innerText} L%0A`;
+        msg += ` *💰Total Amount:* ${document.getElementById('grandTotal').innerText} SAR%0A%0A`;
         
         if (!isDayTime) {
             msg += `Note - Closing reading recorded%0A`;
