--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
         const shift = isDayTime ? "Day" : "Night";
         const time = new Date().toLocaleTimeString('en-US', { hour12: true, hour: '2-digit', minute: '2-digit' });
         
-        let msg = `*Station Report*%0A%0A`;
+        let msg = `*⛽Station Report*%0A%0A`;
         msg += `    *${station}*%0A`;
         msg += `     Date ${getTopDateStr()}%0A`;
         msg += `     Shift - ${shift}%0A`;
